--- a/CSP/water/css/stylehome.css
+++ b/CSP/water/css/stylehome.css
@@ -1,47 +1,12 @@
-          #map {
+         #map {
             height: 100%;
-          }
-         
-          html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-          }
-
-        #listing {
-            position: absolute;
-            width: 200px;
-            height: 470px;
-            overflow: auto;
-            left: 442px;
-            top: 0px;
-            cursor: pointer;
-            overflow-x: hidden;
-          }
-          #findcity {
-            position: absolute;
-            text-align: right;
-            width: 100px;
-            font-size: 14px;
-            padding: 4px;
-            z-index: 5;
-            background-color: #fff;
-          }
-          #locationField {
-            position: absolute;
-            width: 190px;
-            height: 25px;
-            left: 108px;
-            top: 0px;
-            z-index: 5;
-            background-color: #fff;
-          }
-
-          #autocomplete {
-            width: 100%;
-          }
-          #country {
-            width: 100%;
-          }
-          
-          
+         }
+		.pac-container {
+			font-family:  Georgia, "Times New Roman", Times, serif;
+			font-size: 12px;
+			border-radius: 12px;
+			border: 2px solid #F5F5DC;
+			padding-top: 10px;
+			width: 200px;
+			height: 170px;  
+		 }
